INFO-27 <Panier sans l'affichage (Juste gestion du panier)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.profiles.active=dev
+server.error.whitelabel.enabled=false
+
+spring.security.oauth2.client.registration.auth0.client-id=I9IS1nSZuPiCelToqFAiFazH9BtNNpHK
+spring.security.oauth2.client.registration.auth0.client-secret=8HeuvhamqfHn-6MmRvGrW4itzg28Tgbln0Pan6zx3bmQz0oF0MsK7_QOzwDZLj-y
+spring.security.oauth2.client.registration.auth0.scope=openid, profile, email
+spring.security.oauth2.client.provider.auth0.issuer-uri=https://dev-veei1leyrjvnmu0h.us.auth0.com/
